--- a/cssSelectors/src/styles/elements.scss
+++ b/cssSelectors/src/styles/elements.scss
@@ -151,6 +151,7 @@ my-pickle {
   border-width: 2px 2px 9px 2px;
   box-shadow: 0px 5px 0px rgba(0, 0, 0, 0.2);
   position: relative;
+  z-index: 1;
 }
 
 .tablecloth .disappear {
@@ -181,4 +182,5 @@ my-pickle {
   background-color: #2e860a;
   color: white;
   padding: 5px;
+  white-space: normal;
 }
